[gd_scene load_steps=46 format=2]

[ext_resource path="res://GameScenes/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player/PlayerPanel.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Objects/Skills/SkillButton.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/Images/tired.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Images/angry.png" type="Texture" id=6]
[ext_resource path="res://Objects/Player/Images/die.png" type="Texture" id=7]
[ext_resource path="res://UI/Images/Dungeon.png" type="Texture" id=8]
[ext_resource path="res://Objects/Player/Images/stand.png" type="Texture" id=9]
[ext_resource path="res://Objects/Player/Images/hurt.png" type="Texture" id=10]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=11]
[ext_resource path="res://GameScenes/Battle/PostBattleContainer.gd" type="Script" id=14]
[ext_resource path="res://Objects/Player/Images/smile.png" type="Texture" id=15]
[ext_resource path="res://Objects/Player/Images/defend.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 16 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 16 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 16 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 16 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 16 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 16 )
region = Rect2( 156, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 30, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 60, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 90, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 180, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "defend",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "hurt",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 27 ), SubResource( 27 ), SubResource( 27 ), SubResource( 27 ) ],
"loop": false,
"name": "smile",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "tired",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.721569, 0.690196, 0.690196, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ButtonGroup" id=3]
resource_name = "skills"

[sub_resource type="Animation" id=1]
resource_name = "FadeToNextScreen"
length = 0.5
step = 0.05

[sub_resource type="Animation" id=35]
resource_name = "FadeoutPassiveLabel"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Passive:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Passive:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 58 ), Vector2( 1, 52 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 8 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 35 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="PostBattleContainer" type="VBoxContainer" parent="UI"]
visible = false
margin_right = 90.0
margin_bottom = 61.0
mouse_filter = 2
custom_constants/separation = 1
alignment = 1
script = ExtResource( 14 )

[node name="Label" type="Label" parent="UI/PostBattleContainer"]
margin_top = 6.0
margin_right = 90.0
margin_bottom = 22.0
custom_constants/line_spacing = 0
align = 1

[node name="RestartButton" type="Button" parent="UI/PostBattleContainer"]
margin_left = 10.0
margin_top = 23.0
margin_right = 80.0
margin_bottom = 34.0
rect_min_size = Vector2( 70, 11 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart stage"

[node name="NextStageButton" type="Button" parent="UI/PostBattleContainer"]
margin_left = 10.0
margin_top = 34.0
margin_right = 80.0
margin_bottom = 45.0
rect_min_size = Vector2( 70, 11 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Select stage screen"

[node name="SecretButton" type="Button" parent="UI/PostBattleContainer"]
margin_left = 10.0
margin_top = 45.0
margin_right = 80.0
margin_bottom = 56.0
rect_min_size = Vector2( 70, 11 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
text = "Try another way..."

[node name="Timer" type="Timer" parent="UI/PostBattleContainer"]
wait_time = 2.0
one_shot = true

[node name="TopInfosContainer" type="Control" parent="UI"]
margin_top = -2.0
margin_right = 90.0
margin_bottom = 10.0

[node name="Room" type="Label" parent="UI/TopInfosContainer"]
margin_left = 61.0
margin_top = 1.19209e-07
margin_right = 91.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 0.7 )
text = "Room 0"
align = 1

[node name="Stage" type="Label" parent="UI/TopInfosContainer"]
margin_left = 26.0
margin_right = 80.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 0.7 )
text = "Green Fields 1"
align = 1

[node name="Gold" type="Label" parent="UI/TopInfosContainer"]
margin_left = 11.0
margin_top = 1.19209e-07
margin_right = 35.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 0.7 )
text = "999"

[node name="Passive" type="Label" parent="UI"]
margin_left = 1.0
margin_top = 58.0
margin_right = 111.0
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 3
text = "Attack First"
align = 1
valign = 2

[node name="PlayerPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 62.0
margin_right = 87.0
margin_bottom = 83.0
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="UI/PlayerPanel"]
position = Vector2( 13, 9.5 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 7 )
animation = "defend"
frame = 6
playing = true

[node name="HPBar" type="ProgressBar" parent="UI/PlayerPanel"]
margin_left = 26.0
margin_top = 4.0
margin_right = 81.0
margin_bottom = 10.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="HP" type="Label" parent="UI/PlayerPanel"]
margin_left = 38.0
margin_top = -1.0
margin_right = 71.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="AP" type="Label" parent="UI/PlayerPanel"]
margin_left = 22.0
margin_top = 8.0
margin_right = 46.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "AP: 99"

[node name="ATK" type="Label" parent="UI/PlayerPanel"]
margin_left = 42.0
margin_top = 8.0
margin_right = 66.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "AP: 99"
align = 1

[node name="MAG" type="Label" parent="UI/PlayerPanel"]
margin_left = 61.0
margin_top = 8.0
margin_right = 85.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "AP: 99"
align = 2

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_top = 135.0
margin_right = 90.0
margin_bottom = 160.0

[node name="Title" type="Label" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 8.0
custom_constants/line_spacing = 3
custom_styles/normal = SubResource( 2 )
text = "Testing a Title

"
valign = 1
autowrap = true
clip_text = true

[node name="Description" type="Label" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 8.0
margin_right = 89.0
margin_bottom = 24.0
size_flags_horizontal = 0
custom_constants/line_spacing = 0
custom_styles/normal = SubResource( 2 )
text = "Testing a description 
Has tow lines
"
valign = 1
autowrap = true
clip_text = true

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 2.0
margin_top = 86.0
margin_right = 88.0
margin_bottom = 133.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2

[node name="0" type="Button" parent="UI/BattleActionButtons"]
margin_right = 42.0
margin_bottom = 10.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="1" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_right = 86.0
margin_bottom = 10.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "CROSS"
script = ExtResource( 4 )

[node name="2" type="Button" parent="UI/BattleActionButtons"]
margin_top = 12.0
margin_right = 42.0
margin_bottom = 22.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "TRIPLE"
script = ExtResource( 4 )

[node name="3" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 12.0
margin_right = 86.0
margin_bottom = 22.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 4 )

[node name="4" type="Button" parent="UI/BattleActionButtons"]
margin_top = 24.0
margin_right = 42.0
margin_bottom = 34.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="5" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 24.0
margin_right = 86.0
margin_bottom = 34.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="6" type="Button" parent="UI/BattleActionButtons"]
margin_top = 36.0
margin_right = 42.0
margin_bottom = 46.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="7" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 36.0
margin_right = 86.0
margin_bottom = 46.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNextScreen = SubResource( 1 )
anims/FadeoutPassiveLabel = SubResource( 35 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="stat_changed" from="Player" to="UI/PlayerPanel" method="_on_Player_stat_changed"]
[connection signal="update_player_face" from="Player" to="UI/PlayerPanel" method="_on_Player_update_player_face"]
[connection signal="pressed" from="UI/PostBattleContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/PostBattleContainer/NextStageButton" to="." method="_on_NextStageButton_pressed"]
[connection signal="toggled" from="UI/PostBattleContainer/SecretButton" to="." method="_on_SecretButton_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/0" to="UI/BattleActionButtons/0" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/1" to="UI/BattleActionButtons/1" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/2" to="UI/BattleActionButtons/2" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/3" to="UI/BattleActionButtons/3" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/4" to="UI/BattleActionButtons/4" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/5" to="UI/BattleActionButtons/5" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/6" to="UI/BattleActionButtons/6" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/7" to="UI/BattleActionButtons/7" method="_on_toggled"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
